# bevy-pong

./: Cargo.toml  LICENSE  README.md  Trunk.toml  bevy_pong-6bfc972d4776154c.js  index.html
src/: constants.rs  lib.rs  main.rs  plugins.rs  states.rs
src/component/: ball.rs  bounding_box.rs  collide_aabb.rs  collider.rs  controls.rs  game.rs  main_menu.rs  mod.rs  paddle.rs  score.rs  screen_shake.rs  velocity.rs  wall.rs
src/entity/: ball.rs  bounding_box.rs  collider.rs  mod.rs  paddle.rs  position.rs
src/events/: mod.rs  score.rs
src/plugins/fps/: mod.rs
src/plugins/screen_shake/: component.rs  constants.rs  mod.rs
src/plugins/shake/: component.rs  constants.rs  mod.rs
src/plugins/window_scaling_2d/: constants.rs  mod.rs  resources.rs
src/systems/: game.rs  main_menu.rs  mod.rs
src/tests/: helpers.rs
