[package]
name = "bevy_pong"                               # ToDo
version = "0.1.0"
publish = false
authors = ["Devin Gunay <devingunay@gmail.com>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = "^0.13.0"
bevy-inspector-egui = "0.23.3"
bevy_embedded_assets = "0.10.2"
bevy_prototype_lyon = "0.11.0"
rand = "0.8.5"

# keep the following in sync with Bevy's dependencies
# winit = { version = "0.28", default-features = false }
# image = { version = "0.24", default-features = false }

[build-dependencies]
embed-resource = "1.4"
